Fixes overflow x in body

--- a/css/ssl-light.css
+++ b/css/ssl-light.css
@@ -42,7 +42,8 @@ body {
         'footer';
     font-family: "Roboto", sans-serif;
     padding: 10px;
-    overflow-x: hidden;
+    overflow-x: auto;
+    color: var(--lightText);
 }
 
 nav,
